<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.carrieta6.manillasbyxyz.PrincipalActivity">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="521dp"
        android:layout_marginTop="7dp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="2dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:text="@string/titulo"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="5dp"
            tools:layout_editor_absoluteY="0dp" />

        <EditText
            android:id="@+id/txtNumManilla"
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/num_manilla"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material" />

        <RadioGroup
            android:layout_width="163dp"
            android:layout_height="98dp">

            <RadioButton
                android:id="@+id/rbCuerda"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuerda" />

            <RadioButton
                android:id="@+id/rbCuero"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/cuero" />
        </RadioGroup>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dije" />

        <RadioGroup
            android:layout_width="166dp"
            android:layout_height="123dp">

            <RadioButton
                android:id="@+id/rbMartillo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/martillo" />

            <RadioButton
                android:id="@+id/rbAncla"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:text="@string/ancla" />

        </RadioGroup>

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tipo" />

        <Spinner
            android:id="@+id/spMetal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/divisa" />

        <Spinner
            android:id="@+id/spDivisa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btnLiquidar"
            android:layout_width="match_parent"
            android:layout_height="33dp"
            android:onClick="liquidar"
            android:text="@string/liquidar" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valorapagar" />

        <EditText
            android:id="@+id/txtValorLiquidar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
